vlib/v/parser/tests/invalid_attribute_b.vv
[foo::]
fn my_fn_with_invalid_attr() {
}
